Edited wiki page through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -7,7 +7,7 @@
 
  Detailed instructions for these two steps can be found in the [http://groovy.codehaus.org/Tutorial+1+-+Getting+started Groovy tutorial].
 
-`groovyc --version` (note the two dashes) should now display something like:
+Now `groovyc --version` (note the two dashes) should give something like:
 
 {{{
 Groovy compiler version 1.6.0
