--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -7,10 +7,10 @@
 
 Detailed instructions for these two steps can be found in the [http://groovy.codehaus.org/Tutorial+1+-+Getting+started Groovy tutorial].
 
- * Download [http://downloads.sourceforge.net/junit/junit-4.5.jar junit-4.5.jar] or higher
- * Download [http://www.spockframework.org spock-0.1.jar]
- * Create a file named `!HelloSpock.groovy` with the following content: !HelloSpock.groovy
- * Compile !HelloSpock with `groovyc HelloSpock.groovy --classpath path_to_junit.jar path_to_spock.jar
+ * Download junit-4.5.jar or higher ([http://sourceforge.net/project/showfiles.php?group_id=15278&package_id=12472 download page])
+ * Download spock-0.1.jar ([http://www.spockframework.org download page])
+ * Create a file named `HelloSpock.groovy` with the following content: !HelloSpock.groovy
+ * Compile !HelloSpock with `groovyc HelloSpock.groovy --classpath path_to_junit.jar path_to_spock.jar`
  * Run !HelloSpock with `java org.junit.runner.JUnitCore HelloSpock -cp path_to_groovy-all.jar path_to_junit.jar path_to_spock.jar`
 
 = IntelliJ IDEA 8.0 =
