Edited wiki page through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -2,7 +2,7 @@
 
 = Command line =
 
- * Download and setup Java 5 or higher (JRE is good enough)
+ * Download and setup Java 5 or higher (JRE will do for our purposes)
  * Download and setup Groovy 1.6.x binary release ([http://groovy.codehaus.org/Download download page])
 
 Detailed instructions for these two steps can be found in the [http://groovy.codehaus.org/Tutorial+1+-+Getting+started Groovy tutorial].
@@ -17,6 +17,12 @@ Need help? Ask in our [http://groups.google.com/group/spockframework forums].
 
 = Eclipse 3.4 =
 
+Need help? Ask in our [http://groups.google.com/group/spockframework forums].
+
 = IDEA 8.0 =
 
+Need help? Ask in our [http://groups.google.com/group/spockframework forums].
+
 = Netbeans 6.5 =
+
+Need help? Ask in our [http://groups.google.com/group/spockframework forums].
