--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -17,9 +17,9 @@ Need help? Ask in our [http://groups.google.com/group/spockframework forums].
 
 = Eclipse  =
 
-This section will be updated as soon as the Groovy Eclipse plugin adds support for Groovy 1.6. For general information about the Groovy Eclipse plugin, go to http://groovy.codehaus.org/Eclipse+Plugin.
+This section will be updated as soon as the Eclipse Groovy plugin adds support for Groovy 1.6. For general information about the Eclipse Groovy plugin, go to http://groovy.codehaus.org/Eclipse+Plugin.
 
-= IDEA 8.0 =
+= IDEA 8.x =
  * Download and extract Groovy 1.6.x binary release ([http://groovy.codehaus.org/Download download page])
  * Download junit-4.4.jar or higher ([http://sourceforge.net/project/showfiles.php?group_id=15278&package_id=12472 download page]) 
  * Download spock-0.1.jar or higher ([http://code.google.com/p/spock/downloads/list download page])
@@ -33,6 +33,6 @@ Need help? Ask in our [http://groups.google.com/group/spockframework forums].
 
 [http://spock.googlecode.com/files/HelloSpockIdea.png]
 
-= Netbeans 6.5 =
+= Netbeans  =
 
-TODO
+This section will be updated as soon as the NetBeans Groovy plugin adds support for Groovy 1.6. For general information about the NetBeans Groovy plugin, go to http://groovy.codehaus.org/NetBeans+Plugin.
