--- a/wiki/SpockBasics.wiki
+++ b/wiki/SpockBasics.wiki
@@ -208,7 +208,7 @@ This syntax has two small advantages: First, the exception variable is strongly 
 
 ===== Interactions =====
 
-Whereas conditions describe an object's state, interactions describe how objects communicate with each other. Because interactions are devoted a whole chapter, we only give a short example here. Suppose we want to describe the message flow between a publisher and its subscribers. Here is the code:
+Whereas conditions describe an object's state, interactions describe how objects communicate with each other. Interactions are devoted a whole [Interactions chapter], and so we only give a short example here. Suppose we want to describe the flow of messages between a publisher and its subscribers. Here is the code:
 
 {{{
 def "messages are published to all subscribers"() {
